--- a/public/signup/signupStyle.css
+++ b/public/signup/signupStyle.css
@@ -12,6 +12,16 @@ body {
   form {
     margin: auto;
   }
+
+.error {
+  width: 70%;
+  min-height: 1.5em;
+  margin: 0.2em auto 0.5em;
+  font-size: 10px;
+  color: red;
+  text-transform: uppercase;
+  font-weight: bold;
+}
   h1 {
     text-align: center;
     font-family: 'Righteous', cursive;
