--- a/public/signup/signupStyle.css
+++ b/public/signup/signupStyle.css
@@ -2,7 +2,7 @@
 body {
     margin: auto;
     max-width: 500px;
-    font-family: 'Raleway', sans-serif;
+    font-family: cairo;
     background: #22c1c3;  /* fallback for old browsers */
   background: -webkit-linear-gradient(left, #fdbb2d, #22c1c3);
   background: -o-linear-gradient(left, #fdbb2d, #22c1c3);
@@ -31,7 +31,22 @@ body {
     margin: 1% auto;
     padding: 2%;
     width: 90%;
-    border: darkslategrey 2px solid;
+    border:none;
+    border-radius: 10px;
+    font-weight: bold;
+  }
+  button{
+    height: 40px;
+    width: 40%;
+    margin-left: 7%;
+    border:none;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    transition-duration: 0.4s;
+  }
+  button:hover{
+  background: #9ea0a0;
   }
   .warning {
     border: red 2px solid;
