--- a/public/home/home.css
+++ b/public/home/home.css
@@ -3,16 +3,41 @@
 
     font-family: cairo;
 }
+/* 
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(235, 4, 4, 0.979); 
+    border-radius: 2px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 6px rgba(235, 4, 4, 0.979); 
+} */
+::-webkit-scrollbar {
+    width:10px;
+}
 
-::-webkit-scrollbar:horizontal {
-    background-color: lightgray;
-  }
-  ::-webkit-scrollbar:vertical {
-    background-color: #b6eff8;
-  }
-  ::-webkit-scrollbar:hover {
-    background-color: lightblue;
-  }
+/* Track */
+::-webkit-scrollbar-track {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 20px rgba(231, 166, 166, 0.979); 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+
+    -webkit-box-shadow: inset 0 0 50px rgb(255, 0, 0); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    -webkit-box-shadow: inset 0 0 50px rgba(223, 87, 87, 0.979); 
+}
 #signout{
     width: 40%;
     margin:0 auto;
@@ -23,32 +48,50 @@
     font-size: 15px;
     font-weight: bold;
     transition-duration: 0.4s;
-    background: #888383;
+    background: #c72f2f;
     
 }
 
 
   #signout:hover{
-  background: #9ea0a0;
+  background: rgb(160, 177, 162);
   }
 
 
-  .Delete{
+  .Delete {
     width: 40%;
     margin:0 auto;
     display: block;
-    margin-top: 3%;
+    /* margin-top: 3%; */
     border:none;
     border-radius: 10px;
     font-size: 15px;
     font-weight: bold;
     transition-duration: 0.4s;
-    background: #888383;
+    background: #c72f2f;
+    cursor: pointer;    
+
+    
+  }
+ .Add{
+    width: 40%;
+    margin:0 auto;
+    display: block;
+    /* margin-top: 3%; */
+    border:none;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    transition-duration: 0.4s;
+    background: #0ad80a;
+    cursor: pointer;    
+
     
   }
 
-  .Delete:hover{
-    background: #9ea0a0;
+  .Delete:hover ,.Add:hover{
+    background: #9fb39d;
+
     }
   
 
@@ -59,25 +102,42 @@
     height: 100%;
 }
 body{
-    background: rgb(195, 206, 201)
+    background: rgb(230, 236, 233)
+}
+textarea{
+
+    border:1px solid #000000;
+    border-radius: 10px;
 }
 
 .container{
     padding: 0;
     width:60%;
     height: 100%;
-    margin:100px auto;
-    background: rgb(195, 206, 201)
+    margin:20px auto;
+    background: rgb(230, 236, 233)
     
 
 }
 .post{
     width:70%;
     max-height: 30%;
-    margin: 5% auto;
-    background: rgb(240, 239, 239);
+    margin: 2% auto;
+    background: rgb(206, 218, 212);
     border-radius: 10px;
-    overflow-y: auto;
+    overflow-y: scroll;
+    padding: 10px;
+}
+ h3{
+text-align: center;
+    display: block;
+}
+.addPost{
+    width:41%;
+    max-height: 30%;
+    margin: 5% auto;
+    background: rgb(206, 218, 212);
+    border-radius: 10px;
     padding: 10px;
 }
 
@@ -88,11 +148,14 @@ body{
     font-size: 20px;
     margin: 0 auto;
     margin-left: 45%;
+    
 }
 
 .DeleteButton
 {
-    width: 40%;
+    cursor: pointer;    
+
+    width: 10%;
     margin-left: 20%;
     margin-top: 20px;
     /* display: block; */
@@ -102,14 +165,18 @@ body{
     font-size: 15px;
     font-weight: bold;
     transition-duration: 0.4s;
-    background: #888383;
+    background: #c72f2f;
     
 
 }
+.DeleteButton:hover{
 
+    background: #b19898;
+
+}
 .AddComment
 {
-    width: 40%;
+    width: 20%;
     margin:0 auto;
     display: block;
 
@@ -118,8 +185,8 @@ body{
     font-size: 15px;
     font-weight: bold;
     transition-duration: 0.4s;
-    background: #888383;
-    
+    background: #0ad80a;
+cursor: pointer;    
 
 }
 
